--- a/nbproject/index.html
+++ b/nbproject/index.html
@@ -7,6 +7,8 @@ and open the template in the editor.
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+        <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.1.min.js"></script>
+        <script src="newjavascript.js"></script>
     </head>
     <body>
         <div>TODO write content</div>
